samples/_failures_safe/1761257188_291c53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12064888.c: In function ‘main’:
./samples/SAFE/__tmp_12064888.c:144:5: error: expected expression at end of input
  144 |     if (add_compression_block(&ctx, sample_data1, sizeof
      |     ^~
./samples/SAFE/__tmp_12064888.c:144:5: error: expected declaration or statement at end of input
